fixed bug wherein home list was showing when hovering over it when invisible

--- a/notes.scss
+++ b/notes.scss
@@ -51,6 +51,7 @@ header {
     padding: 0;
     margin: 0;
     opacity: 0;
+    visibility: hidden;
 
     list-style-type: none;
 
@@ -58,6 +59,8 @@ header {
 
     &:hover {
       @extend %visible;
+      
+      visibility: visible;
     }
 
     > li {
@@ -114,9 +117,14 @@ main > h2 {
   }
 }
 
-.header-nav:hover + h2,
+.header-nav:hover + h2 {
+  @extend %visible;
+}
+
 .home:hover + ul {
   @extend %visible;
+
+  visibility: visible;
 }
 
 .title-prev {
